# MARIE

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: add.asm  mul.asm
src/: assemble.cpp  assemble.h  assemble.hpp  common.h  disassemble.cpp  disassemble.h  file.hpp  instructions.h  instructions.hpp  logging.hpp  main.cpp  marie.cpp  marie.h  pch.hpp  static_hashtable.hpp
